# Genesis-LLM

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.github/: FUNDING.yml
config/: AGENTS.md
config/model_config/: config.yaml
config/self_model_config/: finetune.yaml  finetune_medical.yaml  finetune_reference.yaml  pretrain.yaml  rlhf.yaml
config/tokenizer_config/: config.yaml
config/trace_config/: swanlab.yaml  wandb.yaml
data_process/: AGENTS.md  fetch_dataset.py  process_data.py  process_preference.py
docker/: Dockerfile  README.md  docker-compose.yml
inference/: README.md
inference/llama.cpp/: AGENTS.md  convert_to_gguf.py
inference/quantize/: AGENTS.md  awq_quantize.py  gptq_quantize.py
inference/vllm/: AGENTS.md  run_vllm.bat  run_vllm.sh
scripts/: find_local_model.sh
self_model/: AGENTS.md  __init__.py  merge_lora.py
self_model/fine_tuning/: README.md  train_finetune.py
self_model/pretrain/: README.md  train_pretrain.py
self_model/rlhf/: README.md  __init__.py  train_dpo.py  train_grpo.py  train_ppo.py
self_model/template/: README.md  baichuan2_chat.json  chatglm3.json  deepseek_chat.json  llama3_instruct.json  qwen2_chatml.json
tokenizer/: AGENTS.md
tokenizer/Simple_MLM/: AGENTS.md  train_mlm.py
tokenizer/aux_tokenizer/: AGENTS.md  extend_base_tokenizer.py  extract_tokenizer_config.py  new_tokens_list.txt  resize_embeddings.py  select_new_tokens.py  train_aux_tokenizer.py
tokenizer/data/: AGENTS.md  fetch_and_clean.py
tokenizer/evaluate/: AGENTS.md  eval_mlm_loss.py  eval_tokenizer.py
(+9 files in other folders)
